# sdl2-game

./: CMakeLists.txt  README.md  common.mk  game_engine  makefile
src/: camera.c  camera.h  common.h  defs.h  draw.c  draw.h  entities.c  entities.h  init.c  init.h  input.c  input.h  io.c  io.h  main.c  main.h  map.c  map.h  menu.c  menu.h  pizza.c  pizza.h  player.c  player.h  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  textures.c  textures.h  util.c  util.h
